@@ -36,5 +36,50 @@
     "show_custom_status_page": false,
     "custom_signup_message": ""
   }
+},
+{
+  "pk": 1,
+  "model": "user.suser",
+  "fields": {
+    "last_name": "",
+    "is_superuser": true,
+    "sex": "",
+    "street": "",
+    "phonenumber": "",
+    "skype": "",
+    "user_permissions": [],
+    "jabber": "",
+    "date_joined": "2013-10-24T13:33:47.626",
+    "city": "",
+    "first_name": "",
+    "msn": "",
+    "dateofbirth": null,
+    "last_login": "2013-10-25T13:57:20.097",
+    "send_me_email": true,
+    "email": "example@example.org",
+    "username": "admin",
+    "picture": "",
+    "is_active": true,
+    "groups": [],
+    "postalcode": null,
+    "password": "pbkdf2_sha256$10000$TPtSj0boeqym$zYr/FPS1QMqwv03p3BE8JRE5REIF1Ge36lmVS2zG6+c=",
+    "country": "DK",
+    "is_staff": true
+  }
+},
+{
+  "pk": 1,
+  "model": "events.attend",
+  "fields": {
+    "changed": null,
+    "price": "100",
+    "registration_date": "2013-10-25T14:13:14.223",
+    "is_new": true,
+    "paid": "0",
+    "change_timestamp": "2013-10-25T14:13:14.223",
+    "state": "accepted",
+    "user": 1,
+    "event": 1
+  }
 }
 ]
