@@ -11,10 +11,10 @@
 
     <tr>
         <td>{{ total.potential }} <br/>({{ total.potential_total | intcomma }},-)</td>
-        <td>{{ total.overpaid }} <br/>({{ total.overpaid_total | intcomma }},-)</td>
-        <td>{{ total.underpaid }} <br/>({{ total.underpaid_total | intcomma }},-)</td>
-        <td>{{ total.unpaid }} <br/>({{ total.unpaid_total | intcomma }},-)</td>
-        <td>{{ total.realised }} <br/>({{ total.realised_total | intcomma }},-)</td>
+        <td><a href="{% url "sadmin2:event_attendees" event_pk=event.pk %}?q=:price<:paid">{{ total.overpaid }}</a> <br/>({{ total.overpaid_total | intcomma }},-)</td>
+        <td><a href="{% url "sadmin2:event_attendees" event_pk=event.pk %}?q=:price>:paid :paid!=0">{{ total.underpaid }}</a> <br/>({{ total.underpaid_total | intcomma }},-)</td>
+        <td><a href="{% url "sadmin2:event_attendees" event_pk=event.pk %}?q=:paid=0">{{ total.unpaid }}</a> <br/>({{ total.unpaid_total | intcomma }},-)</td>
+        <td><a href="{% url "sadmin2:event_attendees" event_pk=event.pk %}?q=:paid!=0">{{ total.realised }}</a> <br/>({{ total.realised_total | intcomma }},-)</td>
     </tr>
 
 </table>
