@@ -68,7 +68,7 @@ def event_attendees(request, event_pk):
     event = get_object_or_404(Event, pk=event_pk)
 
     columns = ('pk', 'user__username', 'user__first_name', 'user__last_name', 'user__email')
-    conditions = ('selection__option__pk', 'selection__suboption__pk', 'state')
+    conditions = ('selection__option__pk', 'selection__suboption__pk', 'state', 'paid', 'price')
 
     queryset = event.attendees.select_related('user').all()
 
