@@ -1,6 +1,7 @@
 8.3.0
 
  * Allow transfers of selections from one option to nothing (deselect option)
+ * Add links to over- and under-paid attendees
 
 8.2.0
 
